Fix mobile scroll performance for Chromium
Apparently, there is a bug in the render engine that causes scroll stuttering when certain styles are combined. In this case drop-shadow with an internal overflow scroll container. The contain property did not help. And since box-shadow works unless you use a clip-path, let's just use box-shadow.

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -24,8 +24,7 @@
   position: relative;
   border-radius: var(--layout-border-radius-small);
   max-width: calc(100vw - 20px);
-  box-shadow: 0 0 1px transparent; // iOS Safari fix or it won't show drop-shadow
-  filter: var(--container-drop-shadow);
+  box-shadow: var(--container-box-shadow); // Drop-shadow filter can cause scroll lag in Chromium
   clear: both;
   contain: style layout; // Improve performance
 
