--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -470,7 +470,7 @@ body {
   }
 
   // =============================================================================
-  // GALLERY
+  // IMAGE BLOCK
   // =============================================================================
 
   .wp-block-image {
