--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -133,6 +133,10 @@ body {
     transform: translateY(-1px);
   }
 
+  :is(.wp-block-embed, .wp-block-audio, .wp-block-video, .wp-block-table, .wp-block-quote, .wp-block-pullquote, .wp-block-gallery, .wp-block-code, .wp-block-preformatted) {
+    clear: both;
+  }
+
   // =============================================================================
   // UTILITY
   // =============================================================================
