Fix embed block margins

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -334,7 +334,8 @@ figure {
 
   &:is(.alignright, .alignleft) {
     float: none;
-    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   &__wrapper {
