Fix comment mod menu style

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -650,7 +650,7 @@
       gap: 8px;
       margin-right: -2px;
 
-      > * {
+      > :not(.popup-menu) {
         padding-left: 2px;
         padding-right: 2px;
       }
