Refactored subrows in chapter lists

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -485,6 +485,11 @@ html:not(.logged-in) body:not(.logged-in) {
     }
   }
 
+  .bullet {
+    color: var(--fg-800);
+    font-family: var(--font-base);
+  }
+
   &__label {
     display: flex;
     align-items: flex-start;
@@ -564,10 +569,6 @@ html:not(.logged-in) body:not(.logged-in) {
         grid-area: 2 / 2 / 3 / 3;
         color: var(--fg-700);
         font: var(--font-weight-normal) var(--fs-xxs)/1.2 var(--font-note);
-
-        &.dot-separator ::before {
-          padding: 0 .175rem;
-        }
       }
 
       &-warning {
