Better account for checkmarks in chapter grid view

--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -520,6 +520,7 @@ $header_breakpoint: 640px;
 
             &-subrow {
               grid-area: 2/1/3/4;
+              padding-right: 16px;
             }
 
             &-right {
