--- a/src/scss/_showcase.scss
+++ b/src/scss/_showcase.scss
@@ -68,7 +68,7 @@
     display: block;
     background: var(--caption-overlay-shadow);
     color: var(--layout-collection-text);
-    font: 500 var(--fs-dxs)/1.2 var(--font-heading);
+    font: 500 var(--fs-dxs)/1.2 var(--ff-heading);
     letter-spacing: 0;
     text-align: center;
     white-space: nowrap;
