--- a/src/scss/_statistics.scss
+++ b/src/scss/_statistics.scss
@@ -7,7 +7,7 @@
     flex: 1 1 auto;
     background: var(--infobox-background);
     color: var(--fg-600);
-    font-family: var(--font-note);
+    font-family: var(--ff-note);
     font-size: var(--fs-xs);
     text-shadow: none;
     white-space: nowrap;
