--- a/src/scss/_suggestions.scss
+++ b/src/scss/_suggestions.scss
@@ -9,7 +9,7 @@
   }
 
   :is(.modal__row, textarea) {
-    font-family: var(--font-mono);
+    font-family: var(--ff-mono);
     font-size: 12px;
     line-height: 1.5;
   }
