--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -2,7 +2,7 @@
   --font-weight-strong: var(--font-weight-heading);
   display: block;
   color: var(--fg-400);
-  font: var(--font-weight-heading) 1em/1.3 var(--font-heading);
+  font: var(--font-weight-heading) 1em/1.3 var(--ff-heading);
 }
 
 /*
