--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -45,7 +45,7 @@
 
     &-tagline {
       color: var(--site-title-tagline-color);
-      font: 400 var(--site-title-tagline-font-size)/1.3 var(--font-heading);
+      font: 400 var(--site-title-tagline-font-size)/1.3 var(--ff-heading);
       letter-spacing: 0;
       margin-top: .5rem;
     }
