--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -53,7 +53,7 @@ section.blog {
     gap: .5rem 1.5rem;
     flex-wrap: wrap;
     color: var(--fg-800);
-    font: var(--font-weight-post-meta) var(--fs-dxs)/1.7 var(--font-note);
+    font: var(--font-weight-post-meta) var(--fs-dxs)/1.7 var(--ff-note);
     margin: .75rem 0 1.5rem;
 
     a {
