--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -206,7 +206,7 @@
       align-items: center;
       background: var(--badge-generic-background);
       color: var(--badge-generic-text);
-      font: var(--font-weight-badge) 10px/1 var(--font-base);
+      font: var(--font-weight-badge) 10px/1 var(--ff-base);
       letter-spacing: -0.03em;
       text-shadow: none;
       border-radius: 2px;
