--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -291,7 +291,7 @@ $header_breakpoint: 640px;
     align-items: center;
     justify-content: flex-end;
     color: var(--fg-600);
-    font-family: var(--font-note);
+    font-family: var(--ff-note);
     font-size: var(--fs-ds); // 14px (desktop) to 13px (mobile)
     line-height: 1.75rem;
     padding: .25rem 8px .25rem 0;
@@ -305,7 +305,7 @@ $header_breakpoint: 640px;
       &:not(.checkmark)::before {
         content: unicode("2022");
         color: var(--fg-800);
-        font-family: var(--font-base);
+        font-family: var(--ff-base);
         padding: 0 .25rem 0 .35rem;
 
         @include bp(640px) {
