--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -468,7 +468,7 @@
     align-items: center;
     background: var(--badge-generic-background);
     color: var(--badge-generic-text);
-    font: var(--font-weight-badge) 10px/1 var(--font-base);
+    font: var(--font-weight-badge) 10px/1 var(--ff-base);
     letter-spacing: -0.03em;
     text-shadow: none;
     border-radius: 2px;
@@ -676,7 +676,7 @@
     cursor: help;
 
     &::before {
-      font-family: var(--font-mono);
+      font-family: var(--ff-mono);
       font-size: 10px;
       word-break: break-all;
       width: 66px;
