--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -55,7 +55,7 @@ figure {
 
   figcaption {
     color: var(--fg-800);
-    font-family: var(--font-note);
+    font-family: var(--ff-note);
     font-size: 75%; // Scales with custom formatting
     line-height: 1.3;
     text-align: center;
@@ -595,7 +595,7 @@ figure {
     transition: background-color var(--transition-duration);
 
     &:first-child {
-      font-family: var(--font-mono);
+      font-family: var(--ff-mono);
       background: var(--button-file-block-background);
       letter-spacing: get_relative_clamp(-0.07, 0, 320, 480);
     }
@@ -652,7 +652,7 @@ figure {
       bottom: 0;
       background: var(--caption-overlay-shadow);
       color: #fff;
-      font: 400 var(--fs-caption)/1.2 var(--font-note);
+      font: 400 var(--fs-caption)/1.2 var(--ff-note);
       letter-spacing: 0;
       overflow-wrap: break-word;
       padding: 2rem .5rem .5rem !important;
@@ -736,7 +736,7 @@ figure {
 
   code {
     display: block;
-    font-family: var(--font-mono);
+    font-family: var(--ff-mono);
     line-height: 1.7;
     white-space: pre;
     border-radius: var(--layout-border-radius-small);
@@ -771,7 +771,7 @@ figure {
 // =============================================================================
 
 .wp-block-preformatted {
-  font-family: var(--font-mono);
+  font-family: var(--ff-mono);
   line-height: 1.7;
   white-space: pre;
   border-radius: var(--layout-border-radius-small);
