--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -101,7 +101,7 @@ body {
   code:not([role=textbox]) {
     display: inline-block;
     background: rgb(0 0 0 / 7%);
-    font-family: var(--font-mono);
+    font-family: var(--ff-mono);
     font-size: .75em;
     line-height: inherit;
     word-wrap: break-word;
@@ -122,7 +122,7 @@ body {
   kbd {
     display: inline-block;
     background: rgb(0 0 0 / 7%);
-    font-family: var(--font-mono);
+    font-family: var(--ff-mono);
     font-size: .75em;
     font-weight: 700;
     letter-spacing: 0;
@@ -529,7 +529,7 @@ body {
         bottom: 0 !important;
         background: var(--caption-overlay-shadow);
         color: #fff;
-        font: 400 var(--fs-caption)/1.2 var(--font-note);
+        font: 400 var(--fs-caption)/1.2 var(--ff-note);
         letter-spacing: 0;
         overflow-wrap: break-word;
         padding: 2rem .5rem .5rem !important;
@@ -620,7 +620,7 @@ body {
 
     code {
       display: block;
-      font-family: var(--font-mono);
+      font-family: var(--ff-mono);
       line-height: 1.7;
       white-space: pre !important;
       border-radius: var(--layout-border-radius-small);
@@ -646,7 +646,7 @@ body {
   // =============================================================================
 
   .wp-block-preformatted {
-    font-family: var(--font-mono);
+    font-family: var(--ff-mono);
     line-height: 1.7;
     white-space: pre;
     border-radius: var(--layout-border-radius-small);
