--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -267,6 +267,10 @@ p a,
   &:hover {
     color: var(--fg-400);
   }
+
+  &.hidden + .embed-logo {
+    display: none;
+  }
 }
 
 .iframe-consent {
