Adding vertical padding to popup menu
I think it just looks better with more spacing, even if the hover background does no longer reach the top and or bottom edge.

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -391,6 +391,7 @@ button[type=submit] {
   text-shadow: none;
   white-space: nowrap;
   text-align: center;
+  padding: 4px 0;
   border-radius: var(--layout-border-radius-small);
   min-width: 64px;
   overflow: hidden;
