--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -289,8 +289,8 @@
   --text-selection-color: var(--fg-1000);
 
   // === SCROLL BARS ===========================================================
-  --scrollbar-background: hsl(var(--bg-1000-free) / 20%);
-  --scrollbar-thumb: var(--bg-500);
+  --scrollbar-background: hsl(var(--bg-1000-free) / 3%);
+  --scrollbar-thumb: hsl(var(--bg-1000-free) / 12%);
   --scrollbar-box-shadow: inset 0 0 6px rgb(0 0 0 / 10%);
 
   // === BADGES ================================================================
