--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -110,7 +110,7 @@
 }
 
 .post-password-form input[type=submit],
-button[type=submit] {
+button[type=submit]:not(._inline) {
   @extend %button;
 }
 
