--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -653,7 +653,7 @@ html:not(.logged-in) body:not(.logged-in) {
   color: var(--fg-900);
   font-size: var(--fs-s);
   padding: 5px 6px 4px;
-  transition: color var(--transition-duration);
+  transition: color var(--transition-duration), opacity var(--transition-duration);
 
   &:hover {
     color: var(--fg-400);
