Add function to render notices

--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -286,4 +286,14 @@
       }
     }
   }
+
+  .notice {
+    &:not(:first-child) {
+      margin-top: 1.5rem;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 1.5rem;
+    }
+  }
 }
