--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -280,6 +280,10 @@
     font-style: italic;
     line-height: 1.3;
 
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+
     .warning,
     .warning > i {
       color: var(--warning);
