--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -255,6 +255,7 @@
   // === POPUP MENU ============================================================
   --popup-menu-background: var(--bg-800);
   --popup-menu-background-hover: var(--bg-600);
+  --popup-menu-background-selected: var(--bg-700);
   --popup-menu-text: var(--fg-1000);
   --popup-menu-text-hover: var(--fg-1000);
 
