--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -384,6 +384,7 @@
   // === POPUP MENU ============================================================
   --popup-menu-background: var(--fg-300);
   --popup-menu-background-hover: var(--fg-500);
+  --popup-menu-background-selected: var(--fg-400);
   --popup-menu-text: var(--fg-1000);
   --popup-menu-text-hover: var(--fg-1000);
 
