Fix popup menu for Safari
Apparently, having a filter drop-shadow causes the content of scrolling popup menus to not being rendered until hovered. Why does Safari always have those exotic bugs? Trillion Dollar company!

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -397,8 +397,8 @@ button[type=submit]:where(:not(._inline)) {
   max-height: min(250px, 80vh);
   min-width: 64px;
   max-width: min(280px, 80vw);
+  box-shadow: var(--container-box-shadow);
   overflow: hidden;
-  filter: var(--container-drop-shadow);
   transform: var(--translateX) var(--translateY);
 
   &._top {
