--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -254,7 +254,7 @@ $header_breakpoint: 640px;
     margin-left: var(--layout-spacing-horizontal-small);
     margin-right: var(--layout-spacing-horizontal-small);
 
-    @include bp(375px) {
+    @include bp(400px) {
       margin-left: var(--layout-spacing-horizontal);
       margin-right: var(--layout-spacing-horizontal);
     }
@@ -294,7 +294,7 @@ $header_breakpoint: 640px;
     font-family: var(--ff-note);
     font-size: var(--fs-ds); // 14px (desktop) to 13px (mobile)
     line-height: 1.75rem;
-    padding: .25rem 8px .25rem 0;
+    padding: .25rem 4px .25rem 0;
     white-space: nowrap;
 
     > *:not(:first-child) {
@@ -314,8 +314,9 @@ $header_breakpoint: 640px;
       }
     }
 
-    .checkmark {
+    button.checkmark {
       margin-left: 1.25rem;
+      margin-right: 0;
     }
 
     > span {
