Add more contain to improve performance
Probably. The effect is hard to measure but at least it did not break things, so I don't see why no to add it preemptively.

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -304,6 +304,7 @@
 .fictioneer-comment {
   margin-top: 16px;
   transition: height 1s, margin 1s, opacity 1s;
+  contain: layout style; // Improve performance
 
   &.parent .children {
     button:is([data-action=sticky], [data-action=unsticky]) {
