--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -400,6 +400,7 @@ button[type=submit]:where(:not(._inline)) {
   box-shadow: var(--container-box-shadow);
   overflow: hidden;
   transform: var(--translateX) var(--translateY);
+  contain: content; // Improve performance
 
   &._top {
     top: -8px;
@@ -572,6 +573,7 @@ html:not(.logged-in) body:not(.logged-in) {
       align-items: center;
       padding: .5rem 8px .5rem 0;
       border-radius: var(--layout-border-radius-small);
+      contain: content; // Improve performance
 
       &-icon {
         grid-area: 1 / 1 / 3 / 2;
