--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -8,6 +8,7 @@
   inset: 0;
   z-index: 1000;
   line-height: 1.3;
+  contain: content; // Improve performance
 
   input[type=text] {
     width: 100%;
