Switch from contain strict to content
Too dangerous. Someone might remove the height or width and suddenly the header image is gone without them understanding why.

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -68,7 +68,7 @@
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   content-visibility: auto;
-  contain: strict; // Improve performance
+  contain: content; // Improve performance
 
   @include bp(640px) {
     box-shadow: var(--layout-header-background-box-shadow);
