Remove more superfluous nodes

--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -242,6 +242,11 @@ body:not(.is-editor):not(.is-admin) {
   }
 }
 
+.separator-dot {
+  color: var(--fg-800);
+  font-family: var(--ff-base);
+}
+
 .tooltipped {
   position: relative;
 
