Fix centering of rating letter
Place-content does not mess up with different items if that should ever be the case.

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -407,7 +407,7 @@
       cursor: help;
       flex: 0 0 auto;
       display: grid;
-      place-items: center;
+      place-content: center;
       color: var(--fg-700);
       font-family: var(--ff-heading);
       font-weight: 600;
